fix/stock-price-checker-proxy-urls

--- a/stock-price-checker-proxy/public/index.html
+++ b/stock-price-checker-proxy/public/index.html
@@ -17,7 +17,7 @@
     </header>
     <main>
       Usage:
-      <pre>GET https://repeated-alpaca.glitch.me/v1/stock/[symbol]/quote</pre>
+      <pre>GET https://stock-price-checker-proxy.freecodecamp.rocks/v1/stock/[symbol]/quote</pre>
       Where:
       <pre>symbol = msft | goog | aapl | ...</pre>
     </main>
