fix: image-search urls

--- a/image-search-abstraction-layer/public/index.html
+++ b/image-search-abstraction-layer/public/index.html
@@ -33,7 +33,7 @@
     <option>xlarge</option>
     <option>xxlarge</option>
   </select><br><br><br>
-  Here's your URL: <a href="https://web-searcher.glitch.me" id="url" target="_blank">https://web-searcher.glitch.me</a>
+  Here's your URL: <a href="https://image-search-abstraction-layer.freecodecamp.rocks/" id="url" target="_blank">https://image-search-abstraction-layer.freecodecamp.rocks/</a>
   <script type="text/javascript" src="imageSearch.js"></script>
 </body>
 </html>
