fix: rollup p2p-video-chat-application

--- a/apps/p2p-video-chat-application/public/index.html
+++ b/apps/p2p-video-chat-application/public/index.html
@@ -8,8 +8,8 @@
 
     <video id="localVideo" autoplay></video>
     <video id="remoteVideo" autoplay>cazzo</video>
-
-    <script src="bundle.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/bundle.js"></script>
 
   </body>
 </html>
