--- a/apps/bar-chart/index.html
+++ b/apps/bar-chart/index.html
@@ -11,6 +11,6 @@
         <div class="visHolder"></div>
       </div>
     </div>
-    <script src="public/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
