--- a/apps/markdown-previewer/index.html
+++ b/apps/markdown-previewer/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/themes/prism.min.css"
     />
-    <title>FCC : Random Quote Machine</title>
+    <title>FCC: Simple React Markdown Previewer</title>
   </head>
   <body>
     <div id="app"></div>
