--- a/apps/markdown-previewer/index.html
+++ b/apps/markdown-previewer/index.html
@@ -24,6 +24,6 @@
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/2.0.3/marked.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/prism.min.js"></script>
-    <script src="script.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
