fix javascript calculator title

--- a/apps/javascript-calculator/index.html
+++ b/apps/javascript-calculator/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="styles.css" />
 
-    <title>FCC: Drum Machine</title>
+    <title>FCC: Javascript Calculator</title>
   </head>
   <body>
     <div id="app"></div>
