feat: add note to landing page about the format for pokémon with sex symbols as part of their name

--- a/apps/pokeapi-proxy/public/index.html
+++ b/apps/pokeapi-proxy/public/index.html
@@ -31,7 +31,9 @@
         </p>
         <p>
           Note that the name should be lowercase, have special characters
-          removed, and dash separated.
+          removed, and dash separated. Also, if the Pokémon has either ♀ or ♀ as
+          part of its name, the format is <code>{name-f}</code> or
+          <code>{name-m}</code>, respectively.
         </p>
         <h2>Example Requests</h2>
         <p>Click any of the example requests below to see its response.</p>
@@ -55,7 +57,7 @@
             </a>
           </li>
         </ul>
-        <h3>Nidoran♀ (Female):</h3>
+        <h3>Nidoran♀:</h3>
         <ul>
           <li>
             <a
