fix: remove pikachu placeholder image, adjust styling and names, add alt to sprite img

--- a/apps/pokemon-search-app/index.html
+++ b/apps/pokemon-search-app/index.html
@@ -38,11 +38,7 @@
             <span id="weight"></span>
             <span id="height"></span>
           </div>
-          <img
-            src="https://cdn.freecodecamp.org/demo-projects/images/default-pikachu-search-sprite.png"
-            alt="default Pikachu search sprite"
-            id="default-sprite"
-          />
+          <img src alt id="sprite" />
           <div id="types"></div>
         </div>
         <div class="bottom-container">
