fix: add label and remove input placeholder from palindrome checker

--- a/apps/palindrome-checker/index.html
+++ b/apps/palindrome-checker/index.html
@@ -22,13 +22,10 @@
       />
       <h1 class="title">Is it a Palindrome?</h1>
       <div class="palindrome-div">
-        <input
-          class="palindrome-input"
-          id="text-input"
-          value=""
-          type="text"
-          placeholder="Type in a word"
-        />
+        <label for="text-input"
+          >Enter in text to check for a palindrome:
+        </label>
+        <input class="palindrome-input" id="text-input" value="" type="text" />
         <button class="palindrome-btn" id="btn">Check</button>
         <div class="results-div hidden" id="result"></div>
       </div>
