--- a/apps/cash-register/index.html
+++ b/apps/cash-register/index.html
@@ -1,31 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="https://cdn.freecodecamp.org/universal/favicons/favicon.ico" />
-    <title>Cash Register</title>
-    <link rel="stylesheet" href="./styles.css" />
-  </head>
 
-  <body>
-    <main>
-      <img
-      class="freecodecamp-logo"
-      src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg"
-      alt="freeCodeCamp Logo"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" href="https://cdn.freecodecamp.org/universal/favicons/favicon.ico" />
+  <title>Cash Register</title>
+  <link rel="stylesheet" href="./styles.css" />
+</head>
+
+<body>
+  <main>
+    <img class="freecodecamp-logo" src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg"
+      alt="freeCodeCamp Logo" />
     <h1>Cash Register Project</h1>
     <div id="change-due"></div>
     <div class="input-div">
-      <input
-        placeholder="Customer Cash"
-        type="number"
-        id="cash"
-        class="user-input"
-        value=""
-      />
+      <input placeholder="Customer Cash" type="number" id="cash" class="user-input" value="" />
 
       <button class="check-btn-styles" id="purchase-btn">Purchase</button>
       <button class="check-btn-styles" id="new-btn">New item</button>
@@ -65,7 +57,8 @@
         <div class="circle"></div>
       </div>
     </div>
-    <main>
-    <script src="./script.js"></script>
-  </body>
+  </main>
+  <script src="./script.js"></script>
+</body>
+
 </html>
