fix: add label to telephone number validator, adjust styling

--- a/apps/telephone-number-validator/index.html
+++ b/apps/telephone-number-validator/index.html
@@ -20,19 +20,13 @@
         src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg"
         alt="freeCodeCamp Logo"
       />
-      <h1>Is This a Valid Phone Number in the United States?</h1>
+      <h1>Telephone Number Validator</h1>
       <div class="phone-container">
         <div class="phone-background">
           <div class="phone-camera"></div>
         </div>
-
-        <input
-          maxlength="20"
-          placeholder="Enter a Phone Number"
-          type="text"
-          id="user-input"
-          value=""
-        />
+        <label for="user-input">Enter a Phone Number:</label>
+        <input maxlength="20" type="text" id="user-input" value="" />
 
         <div id="results-div"></div>
 
