--- a/apps/cash-register/index.html
+++ b/apps/cash-register/index.html
@@ -12,7 +12,6 @@
     <title>Cash Register</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
-
   <body>
     <main>
       <img
@@ -23,18 +22,11 @@
       <h1>Cash Register Project</h1>
       <div id="change-due"></div>
       <div class="input-div">
-        <input
-          placeholder="Customer Cash"
-          type="number"
-          id="cash"
-          class="user-input"
-          value=""
-        />
-
+        <label for="cash">Enter cash from customer:</label>
+        <input type="number" id="cash" class="user-input" value="" />
         <button class="check-btn-styles" id="purchase-btn">Purchase</button>
         <button class="check-btn-styles" id="new-btn">New item</button>
       </div>
-
       <div class="container">
         <div class="top-display-screen-container">
           <p id="message" class="price-screen">Total: $4.23</p>
