fix: remove placeholder from input in favor of label, remove sr-only rule, adjust styling

--- a/apps/pokemon-search-app/index.html
+++ b/apps/pokemon-search-app/index.html
@@ -16,16 +16,8 @@
     <h1>Pokémon Search App</h1>
     <div class="container">
       <form role="search" id="search-form">
-        <label for="search-input" class="sr-only"
-          >Search for Pokémon Name or ID</label
-        >
-        <input
-          type="text"
-          name="pokemon"
-          id="search-input"
-          placeholder="Enter Pokémon Name or ID"
-          required
-        />
+        <label for="search-input">Search for Pokémon Name or ID:</label>
+        <input type="text" name="pokemon" id="search-input" required />
         <button id="search-button">Search</button>
       </form>
       <div class="output">
