--- a/apps/pokemon-search-app/index.html
+++ b/apps/pokemon-search-app/index.html
@@ -30,7 +30,7 @@
             <span id="weight"></span>
             <span id="height"></span>
           </div>
-          <img src alt id="sprite" />
+          <div class="sprite-container"><img alt id="sprite" /></div>
           <div id="types"></div>
         </div>
         <div class="bottom-container">
