fix: rename id from btn to check-btn in palindrome checker

--- a/apps/palindrome-checker/index.html
+++ b/apps/palindrome-checker/index.html
@@ -25,7 +25,7 @@
           >Enter in text to check for a palindrome:
         </label>
         <input class="palindrome-input" id="text-input" value="" type="text" />
-        <button class="palindrome-btn" id="btn">Check</button>
+        <button class="palindrome-btn" id="check-btn">Check</button>
         <div class="results-div hidden" id="result"></div>
       </div>
       <div class="palindrome-definition-div">
