fix: go back to current handling for special characters in palindrome checker, make original output stand out,  update palindrome def

--- a/apps/palindrome-checker/index.html
+++ b/apps/palindrome-checker/index.html
@@ -31,8 +31,9 @@
       <div class="palindrome-definition-div">
         <p class="palindrome-definition">
           <span role="img" aria-label="light-bulb">&#128161;</span>
-          A <b>palindrome</b> is a word or phrase that can be read the same way
-          forwards and backwards.
+          A <dfn>palindrome</dfn> is a word or sentence that's spelled the same
+          way both forward and backward, ignoring punctuation, case, and
+          spacing.
         </p>
       </div>
     </main>
