feat: updates to required JS projects (#520)
* fix: add label and remove input placeholder from palindrome checker

* fix: add label to telephone number validator, adjust styling

* fix: telephone validator resultDiv --> resultsDiv

* fix: add label to cash register, adjust styling for smaller screens

* fix: newItemPrice --> price in cash register project

* fix: remove newItem button and randomization of price

* fix: tweak alert messages for cash register

* fix: remove unused message var from cash register

* fix: layout shift for pokemon search app top container / screen

* fix: remove placeholder from input in favor of label, remove sr-only rule, adjust styling

* fix: layout shift after first search

* fix: convert resetDisplay function to arrow function, reorder code

* fix: update palindrome checker to work with phrases

* chore: clean up project code, fix spacing

* fix: rename id from btn to check-btn in palindrome checker

* fix: U.S. to US for the telephone number validator

* chore: remove js comments from cash register

* fix: use textContent when more appropriate in pokemon search app, add tags when using innerHTML for cash register

* feat: make price and cash in drawer displays dynamic

* chore: sync suggestion to simplify boolean check in the palindrome checker project

* fix: pokemon search app validation errors

* fix: add lang attribute to html tag in roman numeral converter

* fix: go back to current handling for special characters in palindrome checker, make original output stand out,  update palindrome def

* fix: dark mode styling for roman numeral converter, other flex and width tweaks

* fix: add logo to pokemon search app, tweak margins, adjust purple color for better accessibility

* fix: get pokemon search app colors slightly closer to learn, make purple darker

--- a/apps/palindrome-checker/index.html
+++ b/apps/palindrome-checker/index.html
@@ -12,7 +12,6 @@
     <title>Palindrome Checker</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-
   <body>
     <main class="container">
       <img
@@ -22,25 +21,22 @@
       />
       <h1 class="title">Is it a Palindrome?</h1>
       <div class="palindrome-div">
-        <input
-          class="palindrome-input"
-          id="text-input"
-          value=""
-          type="text"
-          placeholder="Type in a word"
-        />
-        <button class="palindrome-btn" id="btn">Check</button>
+        <label for="text-input"
+          >Enter in text to check for a palindrome:
+        </label>
+        <input class="palindrome-input" id="text-input" value="" type="text" />
+        <button class="palindrome-btn" id="check-btn">Check</button>
         <div class="results-div hidden" id="result"></div>
       </div>
       <div class="palindrome-definition-div">
         <p class="palindrome-definition">
           <span role="img" aria-label="light-bulb">&#128161;</span>
-          A <b>palindrome</b> is a word or phrase that can be read the same way
-          forwards and backwards.
+          A <dfn>palindrome</dfn> is a word or sentence that's spelled the same
+          way both forward and backward, ignoring punctuation, case, and
+          spacing.
         </p>
       </div>
     </main>
-
     <script src="script.js"></script>
   </body>
 </html>
