--- a/apps/telephone-number-validator/index.html
+++ b/apps/telephone-number-validator/index.html
@@ -12,7 +12,6 @@
     <title>Telephone Number Validator</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-
   <body>
     <main>
       <img
@@ -20,22 +19,14 @@
         src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg"
         alt="freeCodeCamp Logo"
       />
-      <h1>Is This a Valid Phone Number in the United States?</h1>
+      <h1>Telephone Number Validator</h1>
       <div class="phone-container">
         <div class="phone-background">
           <div class="phone-camera"></div>
         </div>
-
-        <input
-          maxlength="20"
-          placeholder="Enter a Phone Number"
-          type="text"
-          id="user-input"
-          value=""
-        />
-
+        <label for="user-input">Enter a Phone Number:</label>
+        <input maxlength="20" type="text" id="user-input" value="" />
         <div id="results-div"></div>
-
         <div class="phone-footer">
           <button class="btn-styles" id="check-btn">Check</button>
           <button class="btn-styles" id="clear-btn">Clear</button>
