--- a/apps/cash-register/index.html
+++ b/apps/cash-register/index.html
@@ -12,7 +12,6 @@
     <title>Cash Register</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
-
   <body>
     <main>
       <img
@@ -23,21 +22,13 @@
       <h1>Cash Register Project</h1>
       <div id="change-due"></div>
       <div class="input-div">
-        <input
-          placeholder="Customer Cash"
-          type="number"
-          id="cash"
-          class="user-input"
-          value=""
-        />
-
+        <label for="cash">Enter cash from customer:</label>
+        <input type="number" id="cash" class="user-input" value="" />
         <button class="check-btn-styles" id="purchase-btn">Purchase</button>
-        <button class="check-btn-styles" id="new-btn">New item</button>
       </div>
-
       <div class="container">
         <div class="top-display-screen-container">
-          <p id="message" class="price-screen">Total: $4.23</p>
+          <p id="price-screen" class="price-screen"></p>
           <div class="connector"></div>
         </div>
         <div class="top-register">
@@ -52,18 +43,7 @@
             <button class="btn"></button>
             <button class="btn"></button>
           </div>
-          <div id="cid" class="results">
-            <p class="change-title">Change in Drawer</p>
-            <p>Pennies: $1.01</p>
-            <p>Nickels: $2.05</p>
-            <p>Dimes: $3.10</p>
-            <p>Quarters: $4.25</p>
-            <p>Ones: $90</p>
-            <p>Fives: $55</p>
-            <p>Tens: $20</p>
-            <p>Twenties: $60</p>
-            <p>Hundreds: $100</p>
-          </div>
+          <div id="cash-drawer-display" class="cash-drawer-display"></div>
         </div>
         <div class="bottom-register">
           <div class="circle"></div>
