--- a/apps/pokemon-search-app/index.html
+++ b/apps/pokemon-search-app/index.html
@@ -13,68 +13,67 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Pokémon Search App</h1>
-    <div class="container">
-      <form role="search" id="search-form">
-        <label for="search-input" class="sr-only"
-          >Search for Pokémon Name or ID</label
-        >
-        <input
-          type="text"
-          name="pokemon"
-          id="search-input"
-          placeholder="Enter Pokémon Name or ID"
-          required
-        />
-        <button id="search-button">Search</button>
-      </form>
-      <div class="output">
-        <div class="top-container">
-          <div class="name-and-id">
-            <span id="pokemon-name"></span>
-            <span id="pokemon-id"></span>
+    <main>
+      <img
+        class="freecodecamp-logo"
+        src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg"
+        alt="freeCodeCamp Logo"
+      />
+      <h1>Pokémon Search App</h1>
+      <div class="container">
+        <form role="search" id="search-form">
+          <label for="search-input">Search for Pokémon Name or ID:</label>
+          <input type="text" name="pokemon" id="search-input" required />
+          <button id="search-button">Search</button>
+        </form>
+        <div class="output">
+          <div class="top-container">
+            <div class="name-and-id">
+              <span id="pokemon-name"></span>
+              <span id="pokemon-id"></span>
+            </div>
+            <div class="size">
+              <span id="weight"></span>
+              <span id="height"></span>
+            </div>
+            <div id="sprite-container" class="sprite-container"></div>
+            <div id="types"></div>
           </div>
-          <div class="size">
-            <span id="weight"></span>
-            <span id="height"></span>
+          <div class="bottom-container">
+            <table>
+              <tr>
+                <th>Base</th>
+                <th>Stats</th>
+              </tr>
+              <tr>
+                <td>HP:</td>
+                <td id="hp"></td>
+              </tr>
+              <tr>
+                <td>Attack:</td>
+                <td id="attack"></td>
+              </tr>
+              <tr>
+                <td>Defense:</td>
+                <td id="defense"></td>
+              </tr>
+              <tr>
+                <td>Sp. Attack:</td>
+                <td id="special-attack"></td>
+              </tr>
+              <tr>
+                <td>Sp. Defense:</td>
+                <td id="special-defense"></td>
+              </tr>
+              <tr>
+                <td>Speed:</td>
+                <td id="speed" class="speed"></td>
+              </tr>
+            </table>
           </div>
-          <img src alt id="sprite" />
-          <div id="types"></div>
-        </div>
-        <div class="bottom-container">
-          <table>
-            <tr>
-              <th>Base</th>
-              <th>Stats</th>
-            </tr>
-            <tr>
-              <td>HP:</td>
-              <td id="hp"></td>
-            </tr>
-            <tr>
-              <td>Attack:</td>
-              <td id="attack"></td>
-            </tr>
-            <tr>
-              <td>Defense:</td>
-              <td id="defense"></td>
-            </tr>
-            <tr>
-              <td>Sp. Attack:</td>
-              <td id="special-attack"></td>
-            </tr>
-            <tr>
-              <td>Sp. Defense:</td>
-              <td id="special-defense"></td>
-            </tr>
-            <tr>
-              <td>Speed:</td>
-              <td id="speed" class="speed"></td>
-            </tr>
-          </table>
         </div>
       </div>
-    </div>
-    <script src="./script.js"></script>
+      <script src="./script.js"></script>
+    </main>
   </body>
 </html>
