--- a/apps/roman-numeral-converter/index.html
+++ b/apps/roman-numeral-converter/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -20,7 +20,7 @@
     <main>
       <img
         class="freecodecamp-logo"
-        src="https://cdn.freecodecamp.org/platform/universal/fcc_secondary.svg"
+        src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg"
         alt="freeCodeCamp Logo"
       />
       <h1>Roman Numeral Converter</h1>
