fix: typo in pokeapi description

--- a/apps/pokeapi-proxy/public/index.html
+++ b/apps/pokeapi-proxy/public/index.html
@@ -35,7 +35,7 @@
         </p>
         <p>
           Note: Pokémon names should be in lowercase, have special characters
-          removed, and be dash separated. Also, if the Pokémon has either ♀ or ♀
+          removed, and be dash separated. Also, if the Pokémon has either ♀ or ♂
           as part of its name, the format is <code>{name-f}</code> or
           <code>{name-m}</code>, respectively.
         </p>
