feat: add demo project

--- a/apps/rpg-creatures-api/public/index.html
+++ b/apps/rpg-creatures-api/public/index.html
@@ -6,7 +6,7 @@
     <title>RPG Creatures Proxy</title>
     <meta
       name="description"
-      content="A utility API proxy for the freeCodeCamp curriculum"
+      content="A utility API for the freeCodeCamp curriculum"
     />
     <link
       rel="icon"
@@ -24,17 +24,17 @@
         <p>
           Use the endpoint
           <code
-            >https://rpg-creatures-proxy.freecodecamp.rocks/api/creatures</code
+            >https://rpg-creatures-api.freecodecamp.rocks/api/creatures</code
           >
-          to see a list of all valid creature names and id numbers.
+          to see a list of all valid creature names and ID numbers.
         </p>
         <p>
           Use the endpoint
           <code
-            >https://rpg-creatures-proxy.freecodecamp.rocks/api/creatures/{name-or-id}</code
+            >https://rpg-creatures-api.freecodecamp.rocks/api/creature/{name-or-id}</code
           >
           to get data for a creature, where <code>{name-or-id}</code> is the
-          creature's name or id number.
+          creature's name or ID number.
         </p>
         <h2>Example Requests</h2>
         <p>Click any of the example requests below to see its response.</p>
@@ -43,7 +43,7 @@
           <li>
             <a href="/api/creatures" target="_blank" rel="noreferrer noopener"
               ><code
-                >https://rpg-creatures-proxy.freecodecamp.rocks/api/creatures</code
+                >https://rpg-creatures-api.freecodecamp.rocks/api/creatures</code
               ></a
             >
           </li>
@@ -52,22 +52,18 @@
         <ul>
           <li>
             <a
-              href="/api/creatures/pyrolynx"
+              href="/api/creature/pyrolynx"
               target="_blank"
               rel="noreferrer noopener"
               ><code
-                >https://rpg-creatures-proxy.freecodecamp.rocks/api/creatures/pyrolynx</code
+                >https://rpg-creatures-api.freecodecamp.rocks/api/creature/pyrolynx</code
               ></a
             >
           </li>
           <li>
-            <a
-              href="/api/creatures/1"
-              target="_blank"
-              rel="noreferrer noopener"
-            >
+            <a href="/api/creature/1" target="_blank" rel="noreferrer noopener">
               <code
-                >https://rpg-creatures-proxy.freecodecamp.rocks/api/creatures/1</code
+                >https://rpg-creatures-api.freecodecamp.rocks/api/creature/1</code
               >
             </a>
           </li>
