--- a/apps/rpg-creature-api/public/index.html
+++ b/apps/rpg-creature-api/public/index.html
@@ -18,20 +18,18 @@
 
   <body>
     <main>
-      <h1>RPG Creatures Proxy</h1>
+      <h1>RPG Creature API</h1>
       <div class="usage">
         <h2>Usage</h2>
         <p>
           Use the endpoint
-          <code
-            >https://rpg-creatures-api.freecodecamp.rocks/api/creatures</code
-          >
+          <code>https://rpg-creature-api.freecodecamp.rocks/api/creatures</code>
           to see a list of all valid creature names and ID numbers.
         </p>
         <p>
           Use the endpoint
           <code
-            >https://rpg-creatures-api.freecodecamp.rocks/api/creature/{name-or-id}</code
+            >https://rpg-creature-api.freecodecamp.rocks/api/creature/{name-or-id}</code
           >
           to get data for a creature, where <code>{name-or-id}</code> is the
           creature's name or ID number.
@@ -43,7 +41,7 @@
           <li>
             <a href="/api/creatures" target="_blank" rel="noreferrer noopener"
               ><code
-                >https://rpg-creatures-api.freecodecamp.rocks/api/creatures</code
+                >https://rpg-creature-api.freecodecamp.rocks/api/creatures</code
               ></a
             >
           </li>
@@ -56,14 +54,14 @@
               target="_blank"
               rel="noreferrer noopener"
               ><code
-                >https://rpg-creatures-api.freecodecamp.rocks/api/creature/pyrolynx</code
+                >https://rpg-creature-api.freecodecamp.rocks/api/creature/pyrolynx</code
               ></a
             >
           </li>
           <li>
             <a href="/api/creature/1" target="_blank" rel="noreferrer noopener">
               <code
-                >https://rpg-creatures-api.freecodecamp.rocks/api/creature/1</code
+                >https://rpg-creature-api.freecodecamp.rocks/api/creature/1</code
               >
             </a>
           </li>
