fix: titles in html file

--- a/apps/rpg-creature-api/public/index.html
+++ b/apps/rpg-creature-api/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RPG Creatures Proxy</title>
+    <title>RPG Creature API</title>
     <meta
       name="description"
       content="A utility API for the freeCodeCamp curriculum"
