--- a/apps/rpg-creature-search-app/index.html
+++ b/apps/rpg-creature-search-app/index.html
@@ -9,7 +9,7 @@
       type="image/png"
       href="https://cdn.freecodecamp.org/universal/favicons/favicon.ico"
     />
-    <title>Creature Search App</title>
+    <title>RPG Creature Search App</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
@@ -20,7 +20,7 @@
         src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg"
         alt="freeCodeCamp Logo"
       />
-      <h1>Creature Search App</h1>
+      <h1>RPG Creature Search App</h1>
       <div class="container">
         <form role="search" id="search-form">
           <label for="search-input">Search for Creature Name or ID:</label>
