--- a/apps/fruit-search/public/index.html
+++ b/apps/fruit-search/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Live Search</title>
+    <title>Fruit Search</title>
     <meta
       name="description"
       content="A utility API proxy for the freeCodeCamp curriculum"
@@ -17,35 +17,29 @@
   </head>
   <body>
     <main>
-      <h1>Live Search API</h1>
+      <h1>Fruit Search API</h1>
       <div class="usage">
         <h2>Usage</h2>
         <p>
           Use the endpoint
-          <code>https://live-search.freecodecamp.rocks/api/?q={query}</code>
+          <code>https://fruit-search.freecodecamp.rocks/api/?q={query}</code>
           to filter through fruits, where <code>query</code> is your query
           parameter.
         </p>
         <h2>Example Requests</h2>
         <ul>
           <li>
-            <a href="/api/pokemon" target="_blank" rel="noreferrer noopener"
-              ><code>https://live-search.freecodecamp.rocks/api/?q=a</code></a
-            >
+            <code>https://fruit-search.freecodecamp.rocks/api/?q=a</code>
             <span
-              ><b>:</b> returns a list of fruits containing the letter
-              <code>a</code></span
+              >returns a list of fruits containing the letter
+              <code>a</code>.</span
             >
           </li>
           <li>
-            <a href="/api/pokemon" target="_blank" rel="noreferrer noopener"
-              ><code
-                >https://live-search.freecodecamp.rocks/api/?q=berry</code
-              ></a
-            >
+            <code>https://fruit-search.freecodecamp.rocks/api/?q=berry</code>
             <span
-              ><b>:</b> returns a list of fruits containing the letters
-              <code>berry</code></span
+              >returns a list of fruits containing the letters
+              <code>berry</code>.</span
             >
           </li>
         </ul>
