--- a/apps/fruit-search/public/index.html
+++ b/apps/fruit-search/public/index.html
@@ -22,14 +22,16 @@
         <h2>Usage</h2>
         <p>
           Use the endpoint
-          <code>https://fruit-search.freecodecamp.rocks/api/?q={query}</code>
+          <code
+            >https://fruit-search.freecodecamp.rocks/api/fruits?q={query}</code
+          >
           to filter through fruits, where <code>query</code> is your query
           parameter.
         </p>
         <h2>Example Requests</h2>
         <ul>
           <li>
-            <code>https://fruit-search.freecodecamp.rocks/api/?q=a</code>
+            <code>https://fruit-search.freecodecamp.rocks/api/fruits?q=a</code>
             <span
               >returns a list of fruits containing the letter
               <code>a</code>.</span
