update markup and JSON data

--- a/apps/fruit-search/public/index.html
+++ b/apps/fruit-search/public/index.html
@@ -31,16 +31,28 @@
         <h2>Example Requests</h2>
         <ul>
           <li>
-            <code>https://fruit-search.freecodecamp.rocks/api/fruits?q=a</code>
+            <a href="/api/fruits?q=a" target="_blank" rel="noreferrer noopener">
+              <code
+                >https://fruit-search.freecodecamp.rocks/api/fruits?q=a</code
+              ></a
+            >
             <span
               >returns a list of fruits containing the letter
               <code>a</code>.</span
             >
           </li>
           <li>
-            <code>https://fruit-search.freecodecamp.rocks/api/?q=berry</code>
+            <a
+              href="/api/fruits?q=berry"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
+              <code
+                >https://fruit-search.freecodecamp.rocks/api/?q=berry</code
+              ></a
+            >
             <span
-              >returns a list of fruits containing the letters
+              >returns a list of fruits containing the word
               <code>berry</code>.</span
             >
           </li>
