chore: fix api typo

--- a/apps/cat-facts-api/public/index.html
+++ b/apps/cat-facts-api/public/index.html
@@ -22,13 +22,13 @@
         <h2>Usage</h2>
         <p>
           Use the endpoint
-          <code>https://cat-fact-api.freecodecamp.rocks/api/catfacts</code>
+          <code>https://cat-facts-api.freecodecamp.rocks/api/catfacts</code>
           to see a list of all cat facts.
         </p>
         <p>
           Use the endpoint
           <code
-            >https://cat-fact-api.freecodecamp.rocks/api/catfacts/random</code
+            >https://cat-facts-api.freecodecamp.rocks/api/catfacts/random</code
           >
           to get a random cat fact.
         </p>
