--- a/apps/cat-facts-api/public/index.html
+++ b/apps/cat-facts-api/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cat fact API</title>
+    <title>Cat facts API</title>
     <meta
       name="description"
       content="A utility API for the freeCodeCamp curriculum"
@@ -17,7 +17,7 @@
   </head>
   <body>
     <main>
-      <h1>Cat fact API</h1>
+      <h1>Cat facts API</h1>
       <div class="usage">
         <h2>Usage</h2>
         <p>
