--- a/apps/cat-facts-api/public/index.html
+++ b/apps/cat-facts-api/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cat fact API</title>
+    <title>Cat facts API</title>
     <meta
       name="description"
       content="A utility API for the freeCodeCamp curriculum"
@@ -17,18 +17,18 @@
   </head>
   <body>
     <main>
-      <h1>Cat fact API</h1>
+      <h1>Cat facts API</h1>
       <div class="usage">
         <h2>Usage</h2>
         <p>
           Use the endpoint
-          <code>https://cat-fact-api.freecodecamp.rocks/api/catfacts</code>
+          <code>https://cat-facts-api.freecodecamp.rocks/api/catfacts</code>
           to see a list of all cat facts.
         </p>
         <p>
           Use the endpoint
           <code
-            >https://cat-fact-api.freecodecamp.rocks/api/catfacts/random</code
+            >https://cat-facts-api.freecodecamp.rocks/api/catfacts/random</code
           >
           to get a random cat fact.
         </p>
